--- a/index.html
+++ b/index.html
@@ -45,14 +45,20 @@
         <!-- todo start -->
         <div class="todo_list">
             <h1>ToDo list</h1>
+            <!-- <form> -->
             <div class="create_new_todo">
                 <input type="text" class="message" placeholder="Заголовок блока">
+                <!-- <input type="text" class="message1" placeholder="заголовок поля"> -->
+                <!-- <textarea class="text" cols="54" rows="10" placeholder="содержание поля"></textarea> -->
                 <button class="add">Добавить</button>
             </div>
             <div class="wrapper">
-                <ul class="todo"></ul>
+                <div class="todo">
+
+                </div>
             </div>
         </div>
+        <!-- </form> -->
         <!-- todo end -->
     </div>
 
